<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/swipebg"
    android:id="@id/drawer_view2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

...
            android:fontFamily="@font/bangers"
            android:text="Choose a Platform"
            android:textColor="#CBA85B"
            android:textSize="22sp"/>

        <Spinner
            android:id="@+id/streamingSpinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
...
            android:fontFamily="@font/bangers"
            android:text="Choose a Type"
            android:textColor="#CBA85B"
            android:textSize="22sp"/>

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
...
            android:fontFamily="@font/bangers"
            android:text="Choose a Genre"
            android:textColor="#CBA85B"
            android:textSize="22sp"/>

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
...
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/sendRequestButton"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_theaters_24"
                android:scaleType="centerCrop"/>

...
