...
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/startButton"
                android:layout_width="250dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_theaters_24"
                android:scaleType="centerCrop"/>

...
